:monocle_face: attempt to inspect outliers relying on IBS

--- a/notebooks/exploratory/0.27.0-bunop-ibs-nj-trees.ipynb
+++ b/notebooks/exploratory/0.27.0-bunop-ibs-nj-trees.ipynb
@@ -50,9 +50,13 @@
    "outputs": [],
    "source": [
     "ibs_data = pd.read_table(get_interim_dir() / 'SMARTER-OA-OAR3-top-0.4.10/5_breeds-0-50K.mibs.gz', header=None)\n",
-    "sample_names = pd.read_table(get_interim_dir() / 'SMARTER-OA-OAR3-top-0.4.10/5_breeds-0-50K.mibs.id', header=None)\n",
+    "sample_names = pd.read_table(get_interim_dir() / 'SMARTER-OA-OAR3-top-0.4.10/5_breeds-0-50K.mibs.id', header=None, names=['breed', \"sample\"])\n",
     "distance_matrix = 1 - ibs_data\n",
-    "individuals = sample_names[1].tolist()"
+    "\n",
+    "# assign names to the distance matrix\n",
+    "individuals = sample_names[\"sample\"].tolist()\n",
+    "distance_matrix.index = individuals\n",
+    "distance_matrix.columns = individuals"
    ]
   },
   {
@@ -91,25 +95,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deleting all variables except `dm`\n",
-    "del distance_matrix\n",
-    "del ibs_data\n",
-    "del individuals"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Build the Neighbor-Joining Tree\n",
     "nj_tree = nj(dm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -3307,6 +3299,119 @@
     "\n",
     "fig = go.Figure(data=[edge_trace, node_trace], layout=layout)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## calculate the intra-*breed* distances and performing outlier analysis.\n",
+    "\n",
+    "### Detailed Procedure\n",
+    "\n",
+    "1. **Intra-*breed* Distance Calculation**:\n",
+    "   - For each *breed*, we extract the distances between individuals belonging to that same group.\n",
+    "   - We then calculate the mean \\($\\mu$\\) and the standard deviation \\($\\sigma$\\) of the distances between individuals of the same *breed*.\n",
+    "   \n",
+    "2. **Identification of Potential *Crossbreeds***:\n",
+    "   - For each individual, we calculate the average distance between them and other members of their *breed*.\n",
+    "   - If an individual’s average distance from their *breed* exceeds the overall intra-*breed* distance mean (for example, above \\($\\mu + 2\\sigma $\\)), then that individual is considered a potential *crossbreed*.\n",
+    "\n",
+    "3. **Step-by-Step Algorithm**:\n",
+    "   - **Input**: Distance matrix \\( D \\), individuals’ breed assignments.\n",
+    "   - **Output**: List of individuals potentially *crossbreeds* or assigned to the wrong *breed*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to calculate intra-breed distances using an assignment DataFrame\n",
+    "def calculate_intra_breed_stats_with_assignments(distance_df, assignment_df):\n",
+    "    unique_breeds = assignment_df['breed'].unique()\n",
+    "    breed_stats = {}\n",
+    "\n",
+    "    for breed in unique_breeds:\n",
+    "        # Get the samples for a given breed\n",
+    "        breed_samples = assignment_df[assignment_df['breed'] == breed]['sample'].values\n",
+    "        breed_distances = distance_df.loc[breed_samples, breed_samples].values\n",
+    "\n",
+    "        # Extract only values above the diagonal (distances between distinct individuals)\n",
+    "        upper_triangle_indices = np.triu_indices_from(breed_distances, k=1)\n",
+    "        intra_breed_distances = breed_distances[upper_triangle_indices]\n",
+    "\n",
+    "        # Calculate mean and standard deviation\n",
+    "        mean_distance = np.mean(intra_breed_distances)\n",
+    "        std_distance = np.std(intra_breed_distances)\n",
+    "\n",
+    "        breed_stats[breed] = {\n",
+    "            'mean_distance': mean_distance,\n",
+    "            'std_distance': std_distance\n",
+    "        }\n",
+    "\n",
+    "    return breed_stats\n",
+    "\n",
+    "# Function to identify potential crossbreeds using the assignment DataFrame\n",
+    "def identify_outliers_with_assignments(distance_df, assignment_df, breed_stats, threshold=2):\n",
+    "    outliers = []\n",
+    "    for i, row in assignment_df.iterrows():\n",
+    "        ind = row['sample']\n",
+    "        breed = row['breed']\n",
+    "\n",
+    "        # Get other samples of the same breed (excluding the current individual)\n",
+    "        breed_samples = assignment_df[(assignment_df['breed'] == breed) & (assignment_df['sample'] != ind)]['sample'].values\n",
+    "        distances_to_breed = distance_df.loc[ind, breed_samples].values\n",
+    "\n",
+    "        # Calculate the mean distance to other individuals of the same breed\n",
+    "        mean_distance_to_breed = np.mean(distances_to_breed)\n",
+    "\n",
+    "        # Compare with the intra-breed mean and standard deviation\n",
+    "        mean_intra_breed = breed_stats[breed]['mean_distance']\n",
+    "        std_intra_breed = breed_stats[breed]['std_distance']\n",
+    "\n",
+    "        if mean_distance_to_breed > mean_intra_breed + threshold * std_intra_breed:\n",
+    "            outliers.append(ind)\n",
+    "\n",
+    "    return outliers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([],\n",
+       " {'BMN': {'mean_distance': 0.26521966233766237,\n",
+       "   'std_distance': 0.028097615357187217},\n",
+       "  'GUT': {'mean_distance': 0.2352332727272727,\n",
+       "   'std_distance': 0.014657077441748476},\n",
+       "  'MSP': {'mean_distance': 0.3090749761904762,\n",
+       "   'std_distance': 0.027964204201841508},\n",
+       "  'ROU': {'mean_distance': 0.27674486666666664,\n",
+       "   'std_distance': 0.007965034427410922},\n",
+       "  'SAM': {'mean_distance': 0.2958760346320346,\n",
+       "   'std_distance': 0.014550799173203073}})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the intra-breed statistics using the assignment DataFrame\n",
+    "breed_stats_with_assignments = calculate_intra_breed_stats_with_assignments(distance_matrix, sample_names)\n",
+    "\n",
+    "# Identify potential crossbreeds with the assignment DataFrame\n",
+    "outliers_with_assignments = identify_outliers_with_assignments(distance_matrix, sample_names, breed_stats_with_assignments)\n",
+    "\n",
+    "# Display results\n",
+    "outliers_with_assignments, breed_stats_with_assignments\n"
    ]
   },
   {
