:monocle_face: plot IBS outliers with t-SNE

--- a/notebooks/results/0.6.0-bunop-ibs_stats.ipynb
+++ b/notebooks/results/0.6.0-bunop-ibs_stats.ipynb
@@ -162,18 +162,51 @@
     ")\n",
     "tsne_results = tsne.fit_transform(distance_df_imputed)\n",
     "\n",
+    "# Add t-SNE results to the sample_names DataFrame\n",
+    "sample_names['tsne-1'] = tsne_results[:, 0]\n",
+    "sample_names['tsne-2'] = tsne_results[:, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find all unique breeds that have outliers\n",
+    "outlier_breeds = sample_names[sample_names['sample'].isin(outliers_with_assignments)]['breed'].unique()\n",
+    "\n",
+    "# Display the unique outlier breeds\n",
+    "outlier_breeds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a scatter plot with t-SNE results\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "plt.scatter(tsne_results[:, 0], tsne_results[:, 1], label='Individuals')\n",
+    "plt.figure(figsize=(12, 8))\n",
     "\n",
-    "# Highlight the outliers in red\n",
-    "outliers_tsne = tsne_results[[sample_names[sample_names['sample'] == outlier].index[0] for outlier in outliers_with_assignments]]\n",
-    "plt.scatter(outliers_tsne[:, 0], outliers_tsne[:, 1], color='red', label='Outliers', marker='x')\n",
+    "# Plot all samples in gray\n",
+    "plt.scatter(sample_names['tsne-1'], sample_names['tsne-2'], color='gray', alpha=0.05, s=10, label='_nolegend_')\n",
     "\n",
+    "# Plot samples from breeds in `outlier_breeds`\n",
+    "for breed in outlier_breeds:\n",
+    "    breed_data = sample_names[sample_names['breed'] == breed]\n",
+    "    plt.scatter(breed_data['tsne-1'], breed_data['tsne-2'], label=breed, alpha=0.7, s=30)\n",
+    "\n",
+    "# Highlight and color outliers with the same color as their breed, using the 'x' marker\n",
+    "for breed in outlier_breeds:\n",
+    "    outlier_breed_data = sample_names[(sample_names['breed'] == breed) & (sample_names['sample'].isin(outliers_with_assignments))]\n",
+    "    plt.scatter(outlier_breed_data['tsne-1'], outlier_breed_data['tsne-2'], label=f'{breed} Outliers', s=100, marker='x')\n",
+    "\n",
+    "# Final plot settings\n",
+    "plt.title('t-SNE: Breeds with Outliers Highlighted by Same Color')\n",
     "plt.xlabel('t-SNE 1')\n",
     "plt.ylabel('t-SNE 2')\n",
-    "plt.title('t-SNE of Distance Matrix with Outliers Highlighted')\n",
-    "plt.legend()\n",
+    "plt.legend(loc='upper right', bbox_to_anchor=(1.2, 1))  # Adjust legend position if needed\n",
     "plt.show()\n"
    ]
   },
@@ -187,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SMARTER-database",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
