:monocle_face: do a full UMAP plot with all breeds

--- a/notebooks/results/0.6.1-bunop-ibs_clustering.ipynb
+++ b/notebooks/results/0.6.1-bunop-ibs_clustering.ipynb
@@ -27,6 +27,8 @@
     "import umap\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "\n",
     "from sklearn.cluster import KMeans, DBSCAN\n",
     "from sklearn.impute import SimpleImputer\n",
@@ -179,6 +181,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotting mislabelled samples for DBSCAN:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -198,6 +207,55 @@
     "plt.ylabel('UMAP-2')\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate a color palette with enough distinct colors\n",
+    "colors = px.colors.qualitative.Set3  # You can choose a palette from plotly.colors.qualitative\n",
+    "num_colors = len(colors)\n",
+    "\n",
+    "# Create a list of marker symbols to be used\n",
+    "markers = ['circle', 'square', 'diamond', 'cross', 'x', 'triangle-up', 'triangle-down', 'star', 'pentagon']\n",
+    "\n",
+    "# Assign colors and markers to each breed\n",
+    "assignment_df['color'] = assignment_df['breed'].apply(lambda x: colors[hash(x) % num_colors])\n",
+    "assignment_df['marker'] = assignment_df['breed'].apply(lambda x: markers[hash(x) % len(markers)])\n",
+    "\n",
+    "# Create a plotly scatter plot with custom markers and colors\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "# Plot each breed with its assigned color and marker\n",
+    "for breed in assignment_df['breed'].unique():\n",
+    "    breed_data = assignment_df[assignment_df['breed'] == breed]\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x=breed_data['umap-1'],\n",
+    "        y=breed_data['umap-2'],\n",
+    "        mode='markers',\n",
+    "        marker=dict(\n",
+    "            color=breed_data['color'],\n",
+    "            symbol=breed_data['marker'],\n",
+    "            size=10,\n",
+    "            opacity=0.7\n",
+    "        ),\n",
+    "        name=breed,\n",
+    "        text=breed_data['breed'],\n",
+    "        hoverinfo='text'\n",
+    "    ))\n",
+    "\n",
+    "# Set the figure size and display the plot\n",
+    "fig.update_layout(\n",
+    "    title=f\"UMAP Clustering with {len(assignment_df['breed'].unique())} Breeds\",\n",
+    "    width=1000,\n",
+    "    height=800,\n",
+    "    showlegend=False  # Hide the legend to avoid clutter\n",
+    ")\n",
+    "\n",
+    "fig.show()\n"
    ]
   },
   {
