:recycle: minor fixes

--- a/reports/0.1.0-bunop-sheep_dimensionality_reduction.ipynb
+++ b/reports/0.1.0-bunop-sheep_dimensionality_reduction.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SMARTER Sheep UMAP\n",
+    "# SMARTER Sheep Dimensionality Reduction\n",
     "\n",
-    "This notebook is a simple demonstration of how to use UMAP to visualize the SMARTER Sheep dataset. Since umap does not work well with high-dimensional data and with missing data, we will first reduce filter out variants with `PLINK`, impute missing data with `beagle` and the reduce the dimensionality of the data using `PLINK` to do a PCA:\n",
+    "This notebook is a simple demonstration of how to use UMAP, tSNE and PCA to visualize the SMARTER Sheep dataset. Since UMAP and t-SNE does not with missing data and will take a lot of time on genotypes, we will first reduce filter out variants with `PLINK`, impute missing data with `beagle` and the reduce the dimensionality of the data using `PLINK` to do a PCA:\n",
     "\n",
     "```bash\n",
     "cd data/interim\n",
